--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href=".">Portfolio of Richard Hildred</a>
+            <a class="navbar-brand" href=".">Flavour of Asia</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -38,8 +38,9 @@
             <h2>Turkey Dinner</h2>
             <p><img src="https://images.unsplash.com/photo-1524182576066-1bb979e25342?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt"Turkey Dinner"</p>
             <p>Great for leftovers...and the first time!</p>
-            <form action="http://localhost:3001/payment" method="post">
-            <input type="hidden" value="Turkey Dinner" />
+            <p>undefined</p>
+            <form action="http://localhost:3002/payment" method="post">
+            <input type="hidden" name="title" value="Turkey Dinner" />
             <input type="tel" placeholder="Enter your number" />
             <button type="submit">Order now</button>
             </form>
