reset price for paypal

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Great for leftovers...and the first time!</p>
             <p>undefined</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="undefined" />
+            <input type ="hidden" name ="price" value ="21" />
             <input type="hidden" name="title" value="Turkey Dinner" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
@@ -51,7 +51,7 @@
             <p>Crispy fried chicken seasoned with hot pepper sauce. </p>
             <p>$13.00</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="$13.00" />
+            <input type ="hidden" name ="price" value ="21" />
             <input type="hidden" name="title" value="Spicy Korean Fried Chicken" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
