--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <p><img src="https://images.unsplash.com/photo-1524182576066-1bb979e25342?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Turkey Dinner"</p>
             <p>Great for leftovers...and the first time!</p>
             <p>undefined</p>
+            <p>undefined</p>
+            <p>undefined</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="21" />
             <input type="hidden" name="title" value="Turkey Dinner" />
@@ -50,6 +52,8 @@
             <p><img src="https://images.unsplash.com/photo-1600147184950-b0a367a98bc3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Spicy Korean Fried Chicken"</p>
             <p>Crispy fried chicken seasoned with hot pepper sauce. </p>
             <p>$13.00</p>
+            <p>undefined</p>
+            <p>5100 Yonge St, North York, ON M2N 5V7</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="21" />
             <input type="hidden" name="title" value="Spicy Korean Fried Chicken" />
@@ -61,6 +65,8 @@
             <p><img src="https://images.unsplash.com/photo-1557723434-b7376b3cec47?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1360&q=80" alt="Ramen Burger"</p>
             <p>A Japanese twist on an American classic. </p>
             <p>$13.00</p>
+            <p>April 19,2021</p>
+            <p>5100 Yonge St, North York, ON M2N 5V7</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="21" />
             <input type="hidden" name="title" value="Ramen Burger" />
