update prices for paypal

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>undefined</p>
             <p>undefined</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="21" />
+            <input type ="hidden" name ="price" value ="$15.00" />
             <input type="hidden" name="title" value="Turkey Dinner" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
@@ -55,7 +55,7 @@
             <p>undefined</p>
             <p>5100 Yonge St, North York, ON M2N 5V7</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="21" />
+            <input type ="hidden" name ="price" value ="$13.00" />
             <input type="hidden" name="title" value="Spicy Korean Fried Chicken" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
@@ -68,7 +68,7 @@
             <p>April 19,2021</p>
             <p>5100 Yonge St, North York, ON M2N 5V7</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="21" />
+            <input type ="hidden" name ="price" value ="$13.00" />
             <input type="hidden" name="title" value="Ramen Burger" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
