added date and location for turkey

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <p><img src="https://images.unsplash.com/photo-1524182576066-1bb979e25342?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Turkey Dinner"</p>
             <p>Great for leftovers...and the first time!</p>
             <p>$15.00</p>
-            <p>undefined</p>
-            <p>undefined</p>
+            <p>April 25, 2021</p>
+            <p>89 Church Ave, North York, ON M2N 6C9</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="$15.00" />
             <input type="hidden" name="title" value="Turkey Dinner" />
