--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <h2>Spicy Korean Fried Chicken</h2>
             <p><img src="https://images.unsplash.com/photo-1600147184950-b0a367a98bc3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=976&q=80" alt="Spicy Korean Fried Chicken"</p>
             <p>Crispy fried chicken seasoned with hot pepper sauce. </p>
-            <p>$13.00</p>
-            <p>undefined</p>
+            <p>$10.00</p>
+            <p>April 19, 2021</p>
             <p>5100 Yonge St, North York, ON M2N 5V7</p>
             <form action="https://desolate-cliffs-46309.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="$13.00" />
+            <input type ="hidden" name ="price" value ="$10.00" />
             <input type="hidden" name="title" value="Spicy Korean Fried Chicken" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
