--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href=".">Portfolio of Richard Hildred</a>
+            <a class="navbar-brand" href=".">Portfolio of Edwin Leung</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -77,7 +77,7 @@
     </main>
     
 <footer>
-    &copy; <script>document.write(new Date().getFullYear())</script> Richard Hildred
+    &copy; <script>document.write(new Date().getFullYear())</script> Edwin Leung
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
