--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 </nav>
         
         <main>
-    <h1>Upcoming Popup Meals</h1>
+            <div class="a">
+                <h1>Upcoming Popup Meals</h1>
+            </div>
             <h2>Turkey Dinner</h2>
             <p><img src="https://images.unsplash.com/photo-1524182576066-1bb979e25342?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Turkey Dinner"</p>
             <p>Great for leftovers...and the first time!</p>
