--- a/contact.html
+++ b/contact.html
@@ -36,24 +36,24 @@
         <main>
     
         <h1 id="contact-me">Contact Me</h1>
-<h2 id="i-would-love-to-hear-from-you">I would love to hear from you</h2>
-<p>Please fill out the form below to send me a message. I will reply within 3 business days.</p>
+<h2 id="i-would-love-to-hear-from-you">Get in Touch</h2>
+<p>Please fill out the form below to send us a message. We will reply within 3 business days.</p>
 
         <form action="https://dry-bayou-18746.herokuapp.com/send/" method="POST">
             <!-- add a div.form-group rather than the <br />-->
             <div class="form-group">
                 <!-- give inputs the class form-control -->
-                <label>Name: <input name="name" placeholder="name" class="form-control" /></label>
+                <label>Name: <input name="name" placeholder="Name" class="form-control" /></label>
             </div>
             <div class="form-group">
-                <label>Email:<input name="email" placeholder="email" type="email" class="form-control" /></label>
+                <label>Email:<input name="email" placeholder="Email" type="email" class="form-control" /></label>
             </div>
             <div class="form-group">
-                <label>Phone Number:<input name="phone" placeholder="telephone" type="tel"
+                <label>Phone Number:<input name="phone" placeholder="Telephone" type="tel"
                         class="form-control" /></label>
             </div>
             <div class="form-group">
-                <label>Message:<textarea name="message" placeholder="type your message here"
+                <label>Message:<textarea name="message" placeholder="Type your message here"
                         class="form-control"></textarea></label>
             </div>
             <button type="submit">Send Message</button>
