--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         
         <main>
     
-        <h1 id="contact-me">Contact Me</h1>
+        <h1 id="contact-me">Contact</h1>
 <h2 id="i-would-love-to-hear-from-you">Get in Touch</h2>
 <p>Please fill out the form below to send us a message. We will reply within 3 business days.</p>
 
