--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <main>
     
         <h1 id="about">About</h1>
-<p>Tastes of Asia is a pop-up food festival coming to Toronto! </p>
+<p>About page here.</p>
 
         
     </main>
