changed boba description

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>Upcoming Popup Meals</h1>
             <h2>Xing Fu Tang Brown Sugar Boba</h2>
             <p><img src="https://images.unsplash.com/photo-1613019435367-6adf98fb2e44?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Xing Fu Tang Brown Sugar Boba"</p>
-            <p>Great for leftovers...and the first time!</p>
+            <p>Signature drink with handmade pearls and brown sugar.</p>
             <p>$15.00</p>
             <p>April 25, 2021</p>
             <p>89 Church Ave, North York, ON M2N 6C9</p>
