update about and contact

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <main>
     
         <h1 id="about">About</h1>
-<p>Test.</p>
+<p>Tastes of Asia is a pop-up food festival serving you Asian snacks, meals, and drinks!</p>
 
         
     </main>
