--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
         
         <main>
     
-        <h1 id="contact-me">Contact Me</h1>
-<h2 id="i-would-love-to-hear-from-you">I would love to hear from you</h2>
-<p>Please fill out the form below to send me a message. I will reply within 3 business days.</p>
+        <h1 id="contact">Contact</h1>
+<h2 id="we-would-love-to-hear-from-you">We would love to hear from you</h2>
+<p>Please fill out the form below to send us a message. We will reply within 3 business days.</p>
 
         <form action="https://dry-bayou-18746.herokuapp.com/send/" method="POST">
             <!-- add a div.form-group rather than the <br />-->
