added dollar signs to prices

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <h2>DIY Floam Slime</h2>
             <p><img src="https://images.pexels.com/photos/6144294/pexels-photo-6144294.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="DIY Floam Slime"</p>
             <p>Floam slime is a chemistry experiment fun for the whole family!</p>
-            <p>$20.00</p>
+            <p>$20</p>
             <p>April 27, 2021</p>
             <p>white glue, liquid starch, polystyrene foam beads, food colouring</p>
             <form action="https://cryptic-basin-04657.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="$20.00" />
-            <input type="hidden" name="title" value="DIY Floam Slime" />
+            <input type ="hidden" name ="price" value ="$20" />
+            <input type="hidden" name="title" value="$DIY Floam Slime" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
             </form>
@@ -51,12 +51,12 @@
             <h2>DIY Terrarium Kit</h2>
             <p><img src="https://images.unsplash.com/photo-1608718117453-659477c7a1a9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80" alt="DIY Terrarium Kit"</p>
             <p>All the basics for a little ecosystem!</p>
-            <p>$10.00</p>
+            <p>$10</p>
             <p>April 30, 2021</p>
             <p>potting soil, rocks, sand, little succulents</p>
             <form action="https://cryptic-basin-04657.herokuapp.com/payment" method="post">
-            <input type ="hidden" name ="price" value ="$10.00" />
-            <input type="hidden" name="title" value="DIY Terrarium Kit" />
+            <input type ="hidden" name ="price" value ="$10" />
+            <input type="hidden" name="title" value="$DIY Terrarium Kit" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
             </form>
