removed extra dollar sign

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>white glue, liquid starch, polystyrene foam beads, food colouring</p>
             <form action="https://cryptic-basin-04657.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="$20" />
-            <input type="hidden" name="title" value="$DIY Floam Slime" />
+            <input type="hidden" name="title" value="DIY Floam Slime" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
             </form>
@@ -56,7 +56,7 @@
             <p>potting soil, rocks, sand, little succulents</p>
             <form action="https://cryptic-basin-04657.herokuapp.com/payment" method="post">
             <input type ="hidden" name ="price" value ="$10" />
-            <input type="hidden" name="title" value="$DIY Terrarium Kit" />
+            <input type="hidden" name="title" value="DIY Terrarium Kit" />
             <input type="tel" placeholder="Enter your number" name="telephone"/>
             <button type="submit">Order now</button>
             </form>
